fixed font on all pages

--- a/3d_artwork.html
+++ b/3d_artwork.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>3d_artwork</title>
+    <title>Wire Sculpture</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -17,7 +17,13 @@
     <meta name="theme-color" content="#fafafa">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet">
+  
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bubblegum+Sans&family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Satisfy&family=Tilt+Neon&display=swap" rel="stylesheet">
+  </head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +45,7 @@
     <h1><strong>  Wire Sculpture</strong></h1>
    
 
-One of my first challenges in 3D art was to create an object out of wire. I chose to create a wheelchair because it was very personal to me. The wheelchair represents mobility, independence, strength, and freedom. 
+This project goal was to create an object out of wire. I chose to create a wheelchair because it was very personal to me. The wheelchair represents mobility, independence, strength, and freedom. 
 
 I felt like the wire was a perfect medium for this subject matter because of the industrial nature of the two. 
 
