--- a/mottomerch.html
+++ b/mottomerch.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MottoMerch</title>
+    <title>Motto Merch</title>
     <meta name="description" content="3d_artwork">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="">
@@ -17,7 +17,13 @@
     <meta name="theme-color" content="#fafafa">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Satisfy&display=swap" rel="stylesheet">
+  
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bubblegum+Sans&family=Merriweather+Sans:ital@0;1&family=Roboto+Slab:wght@100..900&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Satisfy&family=Tilt+Neon&display=swap" rel="stylesheet">
+  </head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
