--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
     <h1><strong class="main-gorilla-wrapper">About Me</strong></h1>
 <div class="main-gorilla-wrapper">
     <div class="image-text-wrapper">
-      <div class="gorilla-image"><img src="./img/smallcroppedprofilepic.jpg" alt="Digital self-portrait">
+      <div class="gorilla-image"><img src="./img/smallcroppedprofilepic.jpg" alt="profile image">
       </div>
       <div class="text-content">
         <p class="h3 pre-bday-meta"><b>Hey There!</b></p>
@@ -63,8 +63,15 @@
       <p><b>Miscellaneous</b> art including but not limited to, photography, collage, scrapbooking, sewing, and embroidery.</p>
       <p>I am a full-time student, attending LSU for my BA Art & Digital Art & Web Development.</p>
       <p>I'm from a town right outside Chicago, called Hammond, Indiana. In 2014, I moved to southern Louisiana and have been here ever since.</p>
-      <p>I am a Spinal Cord Injury Survivor. In April 2019, I was in a bad car accident where I broke my spine causing me to become paraplegic from the chest down...</p>
+      <p>I am a Spinal Cord Injury Survivor. In April 2019, I was in a bad car accident where I broke my spine causing permanent paraplegia. I now use a wheelchair to get around, which is another separate challenge all on it’s own- Learning to adapt to a whole new way of doing things and living life again.
+
+        I view this as one of my strengths, because it has given me a whole new, and wider perspective on the meaning of life, the outlook on the way things are, and the challenges that others face that we don’t even think about.
+        
+        This is what makes me a strong advocate for ADA accessibility and inclusivity. As an artist, my perspective expands my horizon. As a person, with my advocacy, my art, and my work, I hope to inspire change.
+        </p>
     </div>
   </div>
   </body>
 </html>
+
+
