added logo to navigation bar-made nature 9 times responsive

--- a/aboutme.html
+++ b/aboutme.html
@@ -35,12 +35,13 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutme.html">About</a></li>
-        <li><a href="mywork.html">My Work</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="aboutme.html">About</a></li>
+      <li><a href="index.html"><img src="./img/heart-logo-dh-mini-png.png" alt="dolly-logo"></a></li>
+      <li><a href="mywork.html">My Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+      </nav>
 
     <h1><strong class="main-gorilla-wrapper">About Me</strong></h1>
 <div class="main-gorilla-wrapper">
