--- a/rottingfruit.html
+++ b/rottingfruit.html
@@ -36,6 +36,7 @@
     <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutme.html">About</a></li>
+    <li><a href="index.html"><img src="./img/heart-logo-dh-mini-png.png" alt="dolly-logo"></a></li>
     <li><a href="mywork.html">My Work</a></li>
     <li><a href="contact.html">Contact</a></li>
     </ul>
